--- a/index.html
+++ b/index.html
@@ -16,31 +16,38 @@
       <li><a href="cadastrar.html">Cadastrar</a></li>
       <li><a href="contatos.html">Contatos</a></li>
       <li><a href="pf.html">Perguntas Frequentes</a></li>
-      <li><a href="acessar.html" class="itemacessar">Acessar</a></li>
-      <div class="logo-topo" id="logo-topo">
+      <li><a href="acessar.html" id="itemacessar">Acessar</a></li>
+      <div id="logo-topo">
         <img src="./bbts/bbts.png" alt="Logo BBTS" />
       </div>
+      <div id="linhatopo"></div>
     </ul>
   </nav>
 
   <header>
-    <h1>
-      Conecte sua startup<br />
-      ao futuro da inovação
-    </h1>
-    <h2 class=text-busca > Buscar startup ou soluções </h2>
+    <div id="titulo">
+      <h1>
+        Conecte sua startup<br />
+        ao futuro da inovação
+      </h1>
+    </div>
+    <div id="subtitulo">
       <h4>
         Mostre suas soluções e aumente suas chances de gerar conexões estratégicas
       </h4>
-      <button class="botao-topo" type="button">Cadastre sua startup</button>
+    </div>
+    <div id="buscar">
+      <h2> Buscar startup ou soluções </h2>
+    </div>
+    <button id="botao-topo" type="button">Cadastre sua startup</button>
   </header>
 
   <main>
     <img src="./img/startup.png" alt="Imagem de uma startup" />
-    <img src="./img/apontar-bbts.png" id="apontar" alt="Imagem de pessoa apontando" />
+    <img src="./img/apontar-bbts.png" alt="Imagem de pessoa apontando" />
     <div>
       <h1>Por que cadastrar sua startup?</h1>
-      <div class="elipse"></div>
+      <div id="elipse"></div>
     </div>
   </main>
 
